# S-ENDA-documentation

./: .gitignore  Dockerfile  README.md  Vagrantfile  context.puml  docker-compose.yml  ji.puml  new_nwp_model.rst  new_nwp_model__opendap.rst  pyproject.toml  requirements.txt  template.rst
.github/workflows/: testbuild.yml
demo/: find_latest_sat_data.sh  satpy_create_image.py
source/: S-ENDA-data-distribution-container-diagram.puml  S-ENDA-metadata-service-container-diagram.puml  S-ENDA-metadata-service-context-diagram.puml  acdd_and_curated_catalogue.puml  air_temperature_projection_producer.puml  api.met.no.rst  architecture.rst  catalog.rst  catalog_service_API.rst  conf.py  container.puml  context-gossip.puml  context.puml  conventions.rst  dataaccess.puml  dataaccess.rst  debating.rst  definition_of_done.rst  devel_docker_ci.rst  devel_environ.rst  dgaAPI_component.puml  dm_recipes.rst  doi_at_met.rst  doi_background.rst  doi_how_to.rst  doi_howto.rst  doi_registration.rst  env.yml  fair_documentation.rst  frost.rst  general_conventions.rst  git_conventions.rst  harvest_context.puml  index.rst  information_to_knowledge.puml  information_to_knowledge_klima_bruker.puml  information_to_knowledge_klima_leveranse.puml  information_to_knowledge_northern_lights.puml  meta_heritage_stinfosys.rst  meta_heritage_template.rst  (+45 more)
source/_templates/: template.rst
source/architecture/: container.puml  new_S_ENDA_Find_container.puml
source/puml/: S-ENDA-metadata-service-context-diagram.puml  container.puml  development_workflow.puml  national_and_international_context.puml
(+19 files in other folders)
