[tool]
[tool.pdm]

[project]
name = "S-ENDA-documentation"
version = "0.2"
description = "Documentation and use case descriptions for the S-ENDA project."
authors = [
    {name = "Morten W. Hansen", email = "morten.wergeland.hansen@gmail.com"},
    {name = "Francesco Frassinelli", email = "francesco.frassinelli@nina.no"},
]
dependencies = ["sphinx", "sphinx-rtd-theme", "sphinxcontrib-plantuml", "sphinxcontrib-needs"]
requires-python = ">=3.8"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
